--- a/trunk/application/modules/main/views/backoffice/sidebar/default.phtml
+++ b/trunk/application/modules/main/views/backoffice/sidebar/default.phtml
@@ -1,26 +1,72 @@
-<div class="side-box">
-<h3>Sidebar menu</h3>
-<ul class="links">
-	<li><a href="#">In the Woods</a></li>
+<div class="side-col ui-sortable">
+<div
+	class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
+<div class="portlet-header ui-widget-header">Theme Switcher</div>
+<div class="portlet-content">
+<ul class="side-menu">
+	<li><a class="set_theme" id="default" href="javascript:void(0);"
+		style="font-weight: bold;" title="Default Theme">Default Theme</a></li>
+	<li><a class="set_theme" id="light_blue" href="javascript:void(0);"
+		title="Light Blue Theme">Light Blue Theme</a></li>
 </ul>
 </div>
-
-
-<div class="side-box">
-<h3>What's New?</h3>
-<ul>
-	<li><a href="#">4 Traditional Japanese Styled Flash Websites</a><br>
-	Sometimes flash is a good tool to use to design your website. You can
-	give your visitors the feeling that you can't give using xhtml+css.
-	Here are some of the cool websites I found that gave a taste of how
-	Japanese tradition is. Oh, don't forget to have your volume low.</li>
+</div>
+<div
+	class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
+<div class="portlet-header ui-widget-header">Layout Options</div>
+<div class="portlet-content">
+<ul class="side-menu">
+	<li>Here, you can set the page width, either fixed or fluid. You
+	decide!<br />
+	<br />
+	</li>
+	<li id="fluid_layout"><a href="javascript:void(0);"
+		title="Fluid Layout">Switch to <b>Fluid Layout</b></a></li>
+	<li id="fixed_layout"><a href="javascript:void(0);"
+		title="Fixed Layout">Switch to <b>Fixed Layout</b></a></li>
 </ul>
-<input name="more" id="more" class="button" value="Read More"
-	type="submit"></div>
-<div class="side-box">
-<h3>5 Top FAQ</h3>
-<ul>
-	<li><strong>Mauris mauris enim?</strong><br>
-	Vestibulum fermentum malesuada quam eu luctus.</li>
+</div>
+</div>
+<div
+	class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
+<div class="portlet-header ui-widget-header">Navigation Menu</div>
+<div class="portlet-content">
+<div id="accordion">
+<div>
+<h3><a href="#">Dashboard</a></h3>
+<div>
+<ul class="side-menu">
+	<li><a href="index.html" title="Administration">Administration</a></li>
+	<li><a href="forms.html" title="Forms">Forms Example</a></li>
+	<li><a href="tables.html" title="Tables">Tables example</a></li>
 </ul>
+</div>
+</div>
+<div>
+<h3><a href="#">Dummy drop down</a></h3>
+<div>
+<ul class="side-menu">
+	<li><a href="index.html" title="Administration">Administration</a></li>
+	<li><a href="forms.html" title="Forms">Forms Example</a></li>
+	<li><a href="tables.html" title="Tables">Tables example</a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="other-box yellow-box ui-corner-all">
+<div class="cont tooltip ui-corner-all"
+	title="Tooltips, tooltips, tooltips !">
+<h3>Tooltip !</h3>
+<p>This is a sample tooltip !</p>
+</div>
+</div>
+<div
+	class="portlet ui-widget ui-widget-content ui-helper-clearfix ui-corner-all">
+<div class="portlet-header ui-widget-header">Accordion</div>
+<div class="portlet-content">
+<div id="datepicker"></div>
+</div>
+</div>
 </div>
