--- a/trunk/application/modules/main/views/backoffice/html/backoffice-dashboard/index.phtml
+++ b/trunk/application/modules/main/views/backoffice/html/backoffice-dashboard/index.phtml
@@ -4,6 +4,12 @@
 <table class="clean_text">
 	<tr>
 		<th width="40%"><?php
+		echo __('Engine version')?></th>
+		<td><?php
+		echo $this->engine_version?></td>
+	</tr>
+	<tr>
+		<th><?php
 		echo __('Operating system')?></th>
 		<td><?php
 		echo $this->os_version?></td>
